# tg-django-cookiecutter

./: README.md  cookiecutter.json  renovate.json
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  README.md  commitlint.config.js  docker-compose.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.dockerfiles/: Dockerfile.backend-dev  Dockerfile.frontend-dev  pgadmin4_servers.json  postgresql-dev  server-dev
{{ cookiecutter.repo_name }}/.github/: pull_request_template.md
{{ cookiecutter.repo_name }}/.github/workflows/: mypy.yml  python-test.yml  ruff.yml
{{ cookiecutter.repo_name }}/.hooks/: invoke-xargs.sh
{{ cookiecutter.repo_name }}/.scripts/: init.sh
{{ cookiecutter.repo_name }}/src/: Procfile  manage.py
{{ cookiecutter.repo_name }}/src/docs/: .prettierrc.yaml  conf.py  index.md
{{ cookiecutter.repo_name }}/src/docs/_static/css/: custom.css
{{ cookiecutter.repo_name }}/src/tasks/: __init__.py
{{ cookiecutter.repo_name }}/src/tasks/backend/: __init__.py  migrations.py  tests.py
{{ cookiecutter.repo_name }}/src/tasks/local/: __init__.py  docs.py
{{ cookiecutter.repo_name }}/src/tasks/tasks/: __init__.py  constants.py
{{ cookiecutter.repo_name }}/src/tasks/tasks/backend/: __init__.py  linter.py  migrations.py  tests.py
{{ cookiecutter.repo_name }}/src/tasks/tasks/local/: __init__.py  docs.py
{{ cookiecutter.repo_name }}/src/tests/functional/: __init__.py
{{ cookiecutter.repo_name }}/src/tests/functional/interfaces/authentication/: test_views.py
{{ cookiecutter.repo_name }}/src/tests/integration/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/: celery.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/interface/accounts/: views.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/interface/authentication/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/interfaces/: urls.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/interfaces/accounts/: __init__.py  tasks.py  urls.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/interfaces/authentication/: urls.py  views.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/settings/configuration/: base.py  localhost.py  production.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package_name }}/settings/wsgi/: localhost.py  production.py
